--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libguestfs (1.10.7-1) unstable; urgency=low
+
+  * New upstream version
+  * First upload to unstable
+  * [5d22450] Adjusted some Section: and Architecture: fields
+  * [976c8b8] Removed pre-setting answer to Debconf question
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 08 Aug 2011 20:43:50 +0200
+
 libguestfs (1.10.6-3) experimental; urgency=low
 
   * [f1217be] Fixed building of Python binding
