--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1.10.7-2) unstable; urgency=low
+
+  * [3ec437d] Added missing dependencies (Closes: #608103)
+
+ -- Hilko Bengen <bengen@debian.org>  Wed, 10 Aug 2011 22:48:56 +0200
+
 libguestfs (1.10.7-1) unstable; urgency=low
 
   * New upstream version
