--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libguestfs (1.10.7-3) unstable; urgency=low
+
+  * [c65e1bb] Fixed FTBFS by making fuse test depend on appliance. Thanks
+    to Guido Günther for spotting this.
+  * [fe797af] Added fix for systemd-based host. Thanks to Paul Wise for
+    testing.
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 11 Aug 2011 00:25:19 +0200
+
 libguestfs (1.10.7-2) unstable; urgency=low
 
   * [3ec437d] Added missing dependencies (Closes: #608103)
