--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.29.26-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Added patch to build appliance tarballs using reproducible timestamp
+  * Updated symbols file
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 28 Feb 2015 12:50:14 +0100
+
 libguestfs (1:1.29.25-1) experimental; urgency=medium
 
   * New upstream development version
