--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.30-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 12 Mar 2015 00:58:17 +0100
+
 libguestfs (1:1.29.29-1) experimental; urgency=medium
 
   * New upstream development version
