--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.29.32-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Added mips64, mips64el
+  * Updated symbols file
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 28 Mar 2015 15:11:29 +0100
+
 libguestfs (1:1.29.30-1) experimental; urgency=medium
 
   * New upstream development version
