--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.29.33-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Updated Vcs-* fields
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 02 Apr 2015 18:45:52 +0200
+
 libguestfs (1:1.29.32-1) experimental; urgency=medium
 
   * New upstream development version
