--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.34-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 12 Apr 2015 11:34:21 +0200
+
 libguestfs (1:1.29.33-1) experimental; urgency=medium
 
   * New upstream development version
