--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.36-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 16 Apr 2015 22:14:07 +0200
+
 libguestfs (1:1.29.34-1) experimental; urgency=medium
 
   * New upstream development version
