--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.38-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 28 Apr 2015 21:54:16 +0200
+
 libguestfs (1:1.29.37-1) experimental; urgency=medium
 
   * New upstream development version
