--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.40-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 07 May 2015 08:38:14 +0200
+
 libguestfs (1:1.29.39-1) experimental; urgency=medium
 
   * New upstream development version
