--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.42-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Fri, 15 May 2015 08:15:25 +0200
+
 libguestfs (1:1.29.40-1) experimental; urgency=medium
 
   * New upstream development version
