--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.43-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 16 May 2015 13:20:32 +0200
+
 libguestfs (1:1.29.42-1) experimental; urgency=medium
 
   * New upstream development version
