--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.29.44-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Added Depends/Recommends (curl, gnupg) for virt-builder
+
+ -- Hilko Bengen <bengen@debian.org>  Wed, 03 Jun 2015 20:03:18 +0200
+
 libguestfs (1:1.29.43-1) experimental; urgency=medium
 
   * New upstream development version
