--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.50-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 21 Jul 2015 15:48:05 +0200
+
 libguestfs (1:1.29.47-1) experimental; urgency=medium
 
   * New upstream development version
