--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+libguestfs (1:1.30.4-1) unstable; urgency=medium
+
+  * New upstream version
+  * Point debian/watch to stable branch
+  * Merge control, symbols from 1.28 series
+  * Rebase patches
+  * Remove direct multiarch-support pre-dependency
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 08 Dec 2015 13:33:23 +0100
+
 libguestfs (1:1.29.50-1) experimental; urgency=medium
 
   * New upstream development version
