--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.30.6-1) unstable; urgency=medium
+
+  * New upstream version
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 17 Dec 2015 00:02:45 +0100
+
 libguestfs (1:1.30.4-1) unstable; urgency=medium
 
   * New upstream version
