--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+libguestfs (1:1.32.0-1) unstable; urgency=medium
+
+  * New upstream version
+  * Adapt patch for building Perl bindings in separate build directory
+  * Update symbols file
+  * Adjust architecture list for some dependencies (Closes: #799965)
+  * Add lintian overrides for several test files
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 10 Jan 2016 03:18:00 +0100
+
 libguestfs (1:1.30.6-1) unstable; urgency=medium
 
   * New upstream version
