--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.32.0-2) unstable; urgency=medium
+
+  * Add missing build-dependency for Perl bindings
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 10 Jan 2016 13:22:58 +0100
+
 libguestfs (1:1.32.0-1) unstable; urgency=medium
 
   * New upstream version
