--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.32.1-1) unstable; urgency=medium
+
+  * New upstream version
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 18 Jan 2016 08:50:15 +0100
+
 libguestfs (1:1.32.0-2) unstable; urgency=medium
 
   * Add missing build-dependency for Perl bindings
