--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.32.2-1) unstable; urgency=medium
+
+  * New upstream version
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 30 Jan 2016 13:37:22 +0100
+
 libguestfs (1:1.32.1-1) unstable; urgency=medium
 
   * New upstream version
