--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.32.2-2) unstable; urgency=medium
+
+  * Work around cryptsetup's missing busybox dependency
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 02 Feb 2016 00:27:09 +0100
+
 libguestfs (1:1.32.2-1) unstable; urgency=medium
 
   * New upstream version
