--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.32.2-3) unstable; urgency=medium
+
+  * Add patch to fix Lintian error "gzip-file-is-not-multi-arch-same-safe"
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 09 Feb 2016 23:25:04 +0100
+
 libguestfs (1:1.32.2-2) unstable; urgency=medium
 
   * Work around cryptsetup's missing busybox dependency
