--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.32.2-4) unstable; urgency=medium
+
+  * Call "rubyX.Y -S rake" instead of rakeX.Y which is missing in ruby2.3
+    (Closes: #815764)
+
+ -- Hilko Bengen <bengen@debian.org>  Wed, 24 Feb 2016 23:32:35 +0100
+
 libguestfs (1:1.32.2-3) unstable; urgency=medium
 
   * Add patch to fix Lintian error "gzip-file-is-not-multi-arch-same-safe"
