--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.32.4-1) unstable; urgency=medium
+
+  * Attempt building on ppc64 (without -el)
+  * Drop mips from build architectures; qemu is broken (see #815409)
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 10 Apr 2016 23:42:58 +0200
+
 libguestfs (1:1.32.2-4) unstable; urgency=medium
 
   * Call "rubyX.Y -S rake" instead of rakeX.Y which is missing in ruby2.3
