--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.32.5-1) unstable; urgency=medium
+
+  * New upstream version
+  * Drop PHP7 compatibility patch that has been integrated upstream
+  * Add version-specific GOROOT exclude rule
+  
+ -- Hilko Bengen <bengen@debian.org>  Fri, 03 Jun 2016 11:07:24 +0200
+
 libguestfs (1:1.32.4-2) unstable; urgency=medium
 
   * Depend on systemtap on all architectures
