--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,16 @@
+libguestfs (1:1.32.6-1) unstable; urgency=medium
+
+  * New upstream version
+
+ -- Hilko Bengen <bengen@debian.org>  Wed, 13 Jul 2016 18:57:51 +0200
+
 libguestfs (1:1.32.5-1) unstable; urgency=medium
 
   * New upstream version
   * Drop PHP7 compatibility patch that has been integrated upstream
   * Add version-specific GOROOT exclude rule
   
- -- Hilko Bengen <bengen@debian.org>  Fri, 03 Jun 2016 11:07:24 +0200
+ -- Hilko Bengen <bengen@debian.org>  Wed, 13 Jul 2016 18:56:44 +0200
 
 libguestfs (1:1.32.4-2) unstable; urgency=medium
 
