--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.32.7-1) unstable; urgency=medium
+
+  * New upstream version
+
+ -- Hilko Bengen <bengen@debian.org>  Wed, 10 Aug 2016 08:22:22 +0200
+
 libguestfs (1:1.32.6-1) unstable; urgency=medium
 
   * New upstream version
