--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+libguestfs (1:1.34.2-1) unstable; urgency=medium
+
+  * New upstream version
+  * Add bash completion for guestunmount
+  * Rebase patches; add patches for documentation build failures
+  * Add build-dependencies for Sleuthkit support
+  * Update symbols file
+  * Add sgabios dependency for x86 architectures
+
+ -- Hilko Bengen <bengen@debian.org>  Wed, 26 Oct 2016 11:47:16 +0200
+
 libguestfs (1:1.32.7-1) unstable; urgency=medium
 
   * New upstream version
