--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.34.2-2) unstable; urgency=medium
+
+  * Add patch for quoting variables in run.in
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 27 Oct 2016 19:10:21 +0200
+
 libguestfs (1:1.34.2-1) unstable; urgency=medium
 
   * New upstream version
