--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.34.3-1) unstable; urgency=medium
+
+  * New upstream version
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 29 Oct 2016 20:41:07 +0200
+
 libguestfs (1:1.34.2-2) unstable; urgency=medium
 
   * Add patch for quoting variables in run.in
