--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.34.3-2) unstable; urgency=medium
+
+  * Explicitly set TMPDIR for make quickcheck
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 29 Oct 2016 23:50:53 +0200
+
 libguestfs (1:1.34.3-1) unstable; urgency=medium
 
   * New upstream version
