--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.34.3-3) unstable; urgency=medium
+
+  * Print environment before running quickcheck
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 30 Oct 2016 10:06:28 +0100
+
 libguestfs (1:1.34.3-2) unstable; urgency=medium
 
   * Explicitly set TMPDIR for make quickcheck
