--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.34.3-4) unstable; urgency=medium
+
+  * Unset XDG_RUNTIME_DIR when running make quickcheck
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 30 Oct 2016 12:11:37 +0100
+
 libguestfs (1:1.34.3-3) unstable; urgency=medium
 
   * Print environment before running quickcheck
