--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.34.3-5) unstable; urgency=medium
+
+  * Add db-util build dependency so applications on  rpm-based guests can be inspected
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 10 Nov 2016 12:13:56 +0100
+
 libguestfs (1:1.34.3-4) unstable; urgency=medium
 
   * Unset XDG_RUNTIME_DIR when running make quickcheck
