--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.34.3-6) unstable; urgency=medium
+
+  * Add mips64el architecture
+  * Add some dependencies to libguestfs0 (Closes: #849597)
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 08 Jan 2017 14:42:29 +0100
+
 libguestfs (1:1.34.3-5) unstable; urgency=medium
 
   * Add db-util build dependency so applications on  rpm-based guests can be inspected
