--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.34.3-7) unstable; urgency=medium
+
+  * Introduce alternative kernel build-dependency (Closes: #851969)
+  * Add dh-python build-dependency
+  * Bump Standards-Version
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 22 Jan 2017 15:43:37 +0100
+
 libguestfs (1:1.34.3-6) unstable; urgency=medium
 
   * Add mips64el architecture
