--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.34.4-1) unstable; urgency=medium
+
+  * New upstream version
+  * Update patches; drop two patches integrated upstream
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 31 Jan 2017 23:53:16 +0100
+
 libguestfs (1:1.34.3-7) unstable; urgency=medium
 
   * Introduce alternative kernel build-dependency (Closes: #851969)
