--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.34.6-1) unstable; urgency=medium
+
+  * New upstream version
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 09 Mar 2017 10:14:14 +0100
+
 libguestfs (1:1.34.4-1) unstable; urgency=medium
 
   * New upstream version
