--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.34.6-2) unstable; urgency=medium
+
+  * Re-enable building on mips. Thanks to Aurelien Jarno for pointing out
+    that #815409 was a kernel bug rather than a bug in qemu. (Closes:
+    #816610)
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 20 Apr 2017 23:08:05 +0200
+
 libguestfs (1:1.34.6-1) unstable; urgency=medium
 
   * New upstream version
