--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.34.6-3) unstable; urgency=medium
+
+  * Fix systemd/sysvinit dependency (Closes: #865398)
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 20 Jul 2017 23:39:36 +0200
+
 libguestfs (1:1.34.6-2) unstable; urgency=medium
 
   * Re-enable building on mips. Thanks to Aurelien Jarno for pointing out
