--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.34.6-4) unstable; urgency=medium
+
+  * Fix i386 kernel build dependency (Closes: #869504)
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 24 Jul 2017 01:13:17 +0200
+
 libguestfs (1:1.34.6-3) unstable; urgency=medium
 
   * Fix systemd/sysvinit dependency (Closes: #865398)
