--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.34.6-6) unstable; urgency=medium
+
+  * Fix qemu binary to be used on sparc64
+  * Really bump DH compat level
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 04 Sep 2017 14:36:15 +0200
+
 libguestfs (1:1.34.6-5) unstable; urgency=medium
 
   * Adjust dependencies because *fdisk will be split out of util-linux
