--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+libguestfs (1:1.36.5-1) unstable; urgency=medium
+
+  * New upstream version 1.36.5
+  * Rework debian/rules to reduce number of configure/make/install
+    cycles, drop -dbg package
+  * Rebase patches
+  * Update .symbols
+  * Update Build-Dependencies
+  * Add missing dependency to libguestfs-gobject-dev
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 07 Sep 2017 12:34:03 +0200
+
 libguestfs (1:1.34.6-7) unstable; urgency=medium
 
   * Add missing build-dependencies
