--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+libguestfs (1:1.36.6-1) unstable; urgency=medium
+
+  * New upstream version 1.36.6
+  * Add more test blobs to source lintian overrides ("source-is-missing")
+  * Add QEMU options for powerpcspe
+  * Remove building gtk documentation becasue gtkdoc-mktmpl has
+    disappeared with gtk-doc-tools 1.26
+  * Rebase patches
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 25 Sep 2017 15:41:56 +0200
+
 libguestfs (1:1.36.5-1) unstable; urgency=medium
 
   * New upstream version 1.36.5
