--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.36.6-2) unstable; urgency=medium
+
+  * Fix rules syntax error
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 25 Sep 2017 19:54:47 +0200
+
 libguestfs (1:1.36.6-1) unstable; urgency=medium
 
   * New upstream version 1.36.6
