--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.36.6-3) unstable; urgency=medium
+
+  * Add patch to fix FTBFS because builddir != srcdir
+  * Remove gtk-doc from .install file
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 25 Sep 2017 21:08:04 +0200
+
 libguestfs (1:1.36.6-2) unstable; urgency=medium
 
   * Fix rules syntax error
