--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.36.6-4) unstable; urgency=medium
+
+  * Fix --disable-ocaml related FTBFS found on ppc64el autobuilder
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 26 Sep 2017 17:56:07 +0200
+
 libguestfs (1:1.36.6-3) unstable; urgency=medium
 
   * Add patch to fix FTBFS because builddir != srcdir
