--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.36.7-2) unstable; urgency=medium
+
+  [ Nicholas D Steeves ]
+  * Change Build-Depends: btrfs-tools to btrfs-progs (Closes: #878916)
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 17 Oct 2017 21:13:22 +0200
+
 libguestfs (1:1.36.7-1) unstable; urgency=medium
 
   * New upstream version 1.36.7
