--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+libguestfs (1:1.36.11-2) unstable; urgency=medium
+
+  * e2fsprogs: Add to Build-Depends, don't filter from appliance
+    dependencies (Closes: Closes: #887171, #887203, #887215, #887217,
+    #887220, #887219, #887244, #887259, #887268, #887269, #887271,
+    #887279, #887288, #887289, #887291, #887296, #887280, #887302)
+  * Catch errors in any of the "make install" runs
+  * Fix install target for php extension
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 15 Jan 2018 14:04:59 +0100
+
 libguestfs (1:1.36.11-1) unstable; urgency=medium
 
   * New upstream version 1.36.11
