--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.36.11-3) unstable; urgency=medium
+
+  * Add patch to omit passing locking parameters for non-file disks
+  * Bump Standards-Version
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 23 Jan 2018 09:36:18 +0100
+
 libguestfs (1:1.36.11-2) unstable; urgency=medium
 
   * e2fsprogs: Add to Build-Depends, don't filter from appliance
