--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.36.13-1) unstable; urgency=medium
+
+  * New upstream version 1.36.13
+  * Drop QEMU locking patch; a similar patch has been integrated upstream
+  * Add guestfs-gobject manpage
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 29 Jan 2018 20:13:24 +0100
+
 libguestfs (1:1.36.11-3) unstable; urgency=medium
 
   * Add patch to omit passing locking parameters for non-file disks
