--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,18 @@
+libguestfs (1:1.36.13-2) unstable; urgency=medium
+
+  * Add upstream patch adding dash to the supermin appliance (Closes: #889861)
+  * Add explanation for linux-image-* build-dependency (Closes: #819308)
+  * Remove unneeded dh --parallel argument
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 19 Feb 2018 18:16:29 +0100
+
 libguestfs (1:1.36.13-1) unstable; urgency=medium
 
   * New upstream version 1.36.13
   * Drop QEMU locking patch; a similar patch has been integrated upstream
   * Add guestfs-gobject manpage
 
- -- Hilko Bengen <bengen@debian.org>  Mon, 29 Jan 2018 20:13:24 +0100
+ -- Hilko Bengen <bengen@debian.org>  Mon, 19 Feb 2018 18:11:23 +0100
 
 libguestfs (1:1.36.11-3) unstable; urgency=medium
 
