--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.38.0-2) unstable; urgency=medium
+
+  * Attempt to fix armel, mips* FTBFS
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 09 Apr 2018 23:28:22 +0200
+
 libguestfs (1:1.38.0-1) unstable; urgency=medium
 
   * New upstream version 1.38.0
