--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.38.0-4) unstable; urgency=medium
+
+  * Add build dependencies: ounit, ocaml-libvirt
+  * Improve out-of-tree patches for Perl, PHP, OCaml
+  * Disable building v2v test harness
+
+ -- Hilko Bengen <bengen@debian.org>  Wed, 11 Apr 2018 09:53:14 +0200
+
 libguestfs (1:1.38.0-3) unstable; urgency=medium
 
   * Specify default guestfs path (LIBGUESTFS_PATH) at build time
