--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libguestfs (1:1.38.1-1) unstable; urgency=medium
+
+  * New upstream version 1.38.1
+  * Rebase patches
+  * Add patch to handle OpenJDK 10 (Closes: #897476)
+  * Bump Standards-Version
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 06 May 2018 14:35:30 +0200
+
 libguestfs (1:1.38.0-4) unstable; urgency=medium
 
   * Add build dependencies: ounit, ocaml-libvirt
