--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libguestfs (1:1.38.3-1) unstable; urgency=medium
+
+  * New upstream version 1.38.3
+  * Drop OpenJDK patch that has been integrated upstream
+  * Bump Standards-Version
+  * Add patch to fix perl shebang path in scripts
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 28 Jul 2018 19:00:34 +0200
+
 libguestfs (1:1.38.1-1) unstable; urgency=medium
 
   * New upstream version 1.38.1
