--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.38.4-1) unstable; urgency=medium
+
+  * New upstream version 1.38.4
+  * Bump Standards-Version
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 11 Aug 2018 16:20:40 +0200
+
 libguestfs (1:1.38.3-1) unstable; urgency=medium
 
   * New upstream version 1.38.3
