--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.38.6-1) unstable; urgency=medium
+
+  * New upstream version 1.38.6
+  * Bump Standards-Version
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 23 Sep 2018 01:18:30 +0200
+
 libguestfs (1:1.38.4-1) unstable; urgency=medium
 
   * New upstream version 1.38.4
