--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.38.6-2) unstable; urgency=medium
+
+  [ Simon McVittie ]
+  * Don't build-depend on gjs on s390x or when not running tests
+    (Closes: #910287)
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 14 Oct 2018 22:50:00 +0200
+
 libguestfs (1:1.38.6-1) unstable; urgency=medium
 
   * New upstream version 1.38.6
