--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+libguestfs (1:1.40.1-1) unstable; urgency=medium
+
+  * New upstream version 1.40.1
+  * Update patches
+  * Bump Debhelper compat level
+  * Bump Standards-Version
+  * Update .install
+  * Update .symbols
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 22 Jan 2019 12:20:24 +0100
+
 libguestfs (1:1.38.6-2) unstable; urgency=medium
 
   [ Simon McVittie ]
