--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.40.2-1) unstable; urgency=medium
+
+  * New upstream version 1.40.2
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 10 Feb 2019 22:09:07 +0100
+
 libguestfs (1:1.40.1-1) unstable; urgency=medium
 
   * New upstream version 1.40.1
