--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.40.2-2) unstable; urgency=medium
+
+  * Adjust cryptsetup dependencies (Closes: #906234)
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 21 Apr 2019 22:17:19 +0200
+
 libguestfs (1:1.40.2-1) unstable; urgency=medium
 
   * New upstream version 1.40.2
