--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.38.6-2digitalocean0) UNRELEASED; urgency=low
+
+  * Rebuild for Trusty
+
+ -- Andrew James <ajames@digitalocean.com>  Mon, 05 Aug 2019 09:36:36 -0600
+
 libguestfs (1:1.38.6-2) unstable; urgency=medium
 
   [ Simon McVittie ]
