--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libguestfs (1:1.38.6-2digitalocean1) UNRELEASED; urgency=low
+  
+  * Golang bindings return error interface instead of struct
+  * Generate golang type definitions in a separate package
+  * Add comment to top of golang files that tells go linter it's generated
+  * Golang bindings use expected camelCase insted of snake_case
+
+ -- Jenni Griesmann <jgriesmann@digitalocean.com>  Thu, 29 Aug 2019 16:12:40 -0600
+
 libguestfs (1:1.38.6-2digitalocean0) UNRELEASED; urgency=low
 
   * Rebuild for Trusty
