--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.40.2-3) unstable; urgency=medium
+
+  * Remove Python 2 bindings (Closes: 936872)
+  * Modify build to autogenerate config.ml files (Closes: #946594)
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 23 Dec 2019 13:00:28 +0100
+
 libguestfs (1:1.40.2-2) unstable; urgency=medium
 
   * Adjust cryptsetup dependencies (Closes: #906234)
