--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.40.2-4) unstable; urgency=medium
+
+  * Use designated directory for Go build cache
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 23 Dec 2019 22:24:17 +0100
+
 libguestfs (1:1.40.2-3) unstable; urgency=medium
 
   * Remove Python 2 bindings (Closes: 936872)
