--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.40.2-6) unstable; urgency=medium
+
+  * Add buildsystem patch to avoid OCaml-related FTBFS
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 13 Jan 2020 21:02:32 +0100
+
 libguestfs (1:1.40.2-5) unstable; urgency=medium
 
   * Add missing slash to debian/clean
