--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.40.2-7) unstable; urgency=medium
+
+  * Add missing build-dependencies required for building the Supermin
+    appliance (Closes: #949701)
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 23 Jan 2020 15:10:24 +0100
+
 libguestfs (1:1.40.2-6) unstable; urgency=medium
 
   * Add buildsystem patch to avoid OCaml-related FTBFS
