--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.38.6-2digitalocean2) UNRELEASED; urgency=low
+
+  * Adjusting to build on Focal with no regard to Trusty support
+    - Build-dep btrfs-tools -> btrfs-progs
+
+ -- Andrew James <ajames@digitalocean.com>  Mon, 03 May 2021 15:24:00 -0600
+
 libguestfs (1:1.38.6-2digitalocean1) UNRELEASED; urgency=low
   
   * Golang bindings return error interface instead of struct
