--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ libguestfs (1:1.40.2-7digitalocean0) UNRELEASED; urgency=medium
     - Dropped the automake update patch
     - Adding python3 to the build deps for ocaml-dep.sh
   * Trim trailing whitespace (lintian-brush)
+  * Remove 0016-relax-supermin-version-for-trusty.patch
 
- -- Andrew James <ajames@digitalocean.com>  Tue, 04 May 2021 21:28:34 -0600
+ -- Andrew James <ajames@digitalocean.com>  Tue, 04 May 2021 21:34:54 -0600
 
 libguestfs (1:1.40.2-7) unstable; urgency=medium
 
