--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ libguestfs (1:1.40.2-7digitalocean0) UNRELEASED; urgency=medium
     - Adding python3 to the build deps for ocaml-dep.sh
   * Trim trailing whitespace (lintian-brush)
   * Remove 0016-relax-supermin-version-for-trusty.patch
+  * Fix missing-build-dependency-for-dh_-command (php, python)
 
- -- Andrew James <ajames@digitalocean.com>  Tue, 04 May 2021 21:34:54 -0600
+ -- Andrew James <ajames@digitalocean.com>  Tue, 04 May 2021 21:36:21 -0600
 
 libguestfs (1:1.40.2-7) unstable; urgency=medium
 
