--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 libguestfs (1:1.40.2-7digitalocean1) UNRELEASED; urgency=medium
 
   * Lower debhelper level to 11 for Bionic
+  * Drop 0017-python-oneliner-for-realpath.patch
 
- -- Andrew James <ajames@digitalocean.com>  Wed, 08 Jun 2022 17:16:42 -0600
+ -- Andrew James <ajames@digitalocean.com>  Wed, 08 Jun 2022 17:17:33 -0600
 
 libguestfs (1:1.40.2-7digitalocean0) UNRELEASED; urgency=medium
 
